yaml/boinc/boinc_client_non_gpu.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rosettaathome
  namespace: boinc
  labels:
    app: rosettaathome
spec:
  replicas: 1
  template:
    metadata:
      name: rosettaathome
      namespace: boinc
      labels:
        app: rosettaathome
    spec:
      containers:
        - name: rosettaathome
          image: boinc/client
          imagePullPolicy: Always
          volumeMounts:
            - mountPath: /var/lib/boinc
              name: rosettaathomedata
          ports:
            - containerPort: 80
              name: http
              protocol: TCP
            - containerPort: 443
              name: https
              protocol: TCP
            - containerPort: 31416
              name: manager
              protocol: TCP
      volumes:
        - name: rosettaathomedata
          persistentVolumeClaim:
            claimName: rosettaathomedata
  selector:
    matchLabels:
      app: rosettaathome
---
apiVersion: v1
kind: Service
metadata:
  name: rosettaathome
  namespace: boinc
  annotations:
    metallb.universe.tf/address-pool: #Replace this comment with your MetalLB Pool Name
spec:
  selector:
    app: rosettaathome
  ports:
    - port: 80
      name: http
      protocol: TCP
    - port: 443
      name: https
      protocol: TCP
    - port: 31416
      name: manager
      protocol: TCP
  type: LoadBalancer
