yaml/boinc/boinc_client_non_gpu_traefik.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rosettaathome
  namespace: boinc
  labels:
    app: rosettaathome
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rosettaathome
  template:
    metadata:
      name: rosettaathome
      namespace: boinc
      labels:
        app: rosettaathome
    spec:
      containers:
        - name: rosettaathome
          image: boinc/client
          imagePullPolicy: Always
          volumeMounts:
            - mountPath: /var/lib/boinc
              name: rosettaathomedata
          ports:
            - containerPort: 80
              name: http
              protocol: TCP
            - containerPort: 443
              name: https
              protocol: TCP
            - containerPort: 31416
              name: manager
              protocol: TCP
      volumes:
        - name: rosettaathomedata
          persistentVolumeClaim:
            claimName: rosettaathomedata
  selector:
    matchLabels:
      app: rosettaathome

---
apiVersion: v1
kind: Service
metadata:
  name: rosettaathome
  namespace: boinc
spec:
  selector:
    app: rosettaathome
  ports:
    - port: 80
      name: http
      protocol: TCP
    - port: 443
      name: https
      protocol: TCP
    - port: 31416
      name: manager
      protocol: TCP
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: rosettaathome
  namespace: boinc
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.frontend.rule.type: PathPrefixStrip
spec:
  rules:
    - host: communitygrid
      http:
        paths:
          - path: /boinc
            backend:
              serviceName: rosettaathome
              servicePort: 80
